refactor: adapt core modules to pragmatica-lite 0.10.0 API
- Fix generic type spacing (< ?> to <?>)
- Update KVStore.reset() to return Unit
- Adapt SliceInvoker to use TypeToken
- Update test assertions and patterns
- Minor code formatting adjustments